--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -1,1 +1,64 @@
+application=Application
 greeting=Welcome Admin!
+
+organisations=Organisations
+organisations.no_created=No Created Organisations
+organisation.change_services=Change Services
+organisation.change_masters=Change Services
+organisation.change_schedule=Change Schedule
+organisation.suspended=Organisation is currently suspended
+organisation.suspended.title=What does Organisation suspension mean
+organisation.suspended.body=Organisation can be suspended by many reasons. Example:
+organisation.change=Change Organisation
+organisation.name=Name
+organisation.name.invalid=Name length must be greater than 1 and less than 30 characters
+organisation.address=Address
+organisation.address.invalid=Address length must be greater than 4 and less than 46 characters
+organisation.desc=Description
+organisation.desc.invalid=Description length must be greater than 30 and less than 121 character
+organisation.suspend=Suspend
+organisation.launch=Launch
+organisation.save=Save
+organisation.delete=Delete
+
+masters=Masters
+master.create=Create Master
+master.select=Select Master
+master.name=Name
+master.name.incorrect=Name length must be greater than 2 and less than 46 characters
+master.last_name=Last Name
+master.last_name.incorrect=Last name must be more than 2 and less than 46 characters
+master.desc=Description
+master.desc.incorrect=Description length must be greater than 14 characters
+master.save=Save
+master.delete=Delete
+master.change=Change Master
+master.assign_services=Assign Services
+
+services=Services
+service.create=Create Service
+service.select=Select Service
+service.name=Name
+service.name.incorrect=The length of the title must be more than 2 and less than 40 characters
+service.price=Price
+service.price.incorrect=Price must be positive
+service.desc=Description
+service.desc.incorrect=Description length must be greater than 14 characters
+service.save=Save
+service.delete=Delete
+service.change=Change Service
+service.append=Append
+service.remove=Append
+
+date_time.select=Select Date And Time
+schedule=Schedule
+
+profiles=Profiles
+profiles.change=Change Profiles
+profile=Profile
+profile.no_created=No Profiles created
+
+pagination.previous=Previous
+pagination.next=Next
+
+
