--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -4,7 +4,7 @@ greeting=Welcome Admin!
 organisations=Organisations
 organisations.no_created=No Created Organisations
 organisation.change_services=Change Services
-organisation.change_masters=Change Services
+organisation.change_masters=Change Masters
 organisation.change_schedule=Change Schedule
 organisation.suspended=Organisation is currently suspended
 organisation.suspended.title=What does Organisation suspension mean
@@ -52,6 +52,12 @@ service.remove=Append
 
 date_time.select=Select Date And Time
 schedule=Schedule
+date=Date
+date.incorrect=You must choose future date
+date.start=Start
+date.start.incorrect=s
+date.end=End
+
 
 profiles=Profiles
 profiles.change=Change Profiles
