Russian properties created

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -48,7 +48,7 @@ service.save=Save
 service.delete=Delete
 service.change=Change Service
 service.append=Append
-service.remove=Append
+service.remove=Remove
 
 date_time.select=Select Date And Time
 schedule=Schedule
