--- a/web/src/main/resources/messages_ru.properties
+++ b/web/src/main/resources/messages_ru.properties
@@ -1,7 +1,72 @@
-greeting=\u041F\u0440\u0438\u0432\u0435\u0442, \u0410\u0434\u043C\u0438\u043D!
-organisations=\u041E\u0440\u0433\u0430\u043D\u0438\u0437\u0430\u0446\u0438\u0438
-profiles=\u041F\u0440\u043E\u0444\u0438\u043B\u0438
+application=\u041F\u0440\u0438\u043B\u043E\u0436\u0435\u043D\u0438\u0435
+greeting=\u041F\u0440\u0438\u0432\u0435\u0442, \u0430\u0434\u043C\u0438\u043D!
 
-organisation.name.invalid=\u0414\u043B\u0438\u043D\u0430 \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u044F \u0434\u043E\u043B\u0436\u043D\u0430 \u0431\u044B\u0442\u044C \u0431\u043E\u043B\u044C\u0448\u0435 1 \u0438 \u043C\u0435\u043D\u044C\u0448\u0435 30 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
-organisation.address.invalid=\u0414\u043B\u0438\u043D\u0430 \u0444\u0430\u043C\u0438\u043B\u0438\u0438 \u0434\u043E\u043B\u0436\u043D\u0430 \u0431\u044B\u0442\u044C \u0431\u043E\u043B\u044C\u0448\u0435 4 \u0438 \u043C\u0435\u043D\u044C\u0448\u0435 46 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
-organisation.desc.invalid=\u0414\u043B\u0438\u043D\u0430 \u043E\u043F\u0438\u0441\u0430\u043D\u0438\u044F \u0434\u043E\u043B\u0436\u043D\u0430 \u0431\u044B\u0442\u044C \u0431\u043E\u043B\u044C\u0448\u0435 30 \u0438 \u043C\u0435\u043D\u044C\u0448\u0435 121 \u0441\u0438\u043C\u0432\u043E\u043B\u0430
+organisations=\u041E\u0440\u0433\u0430\u043D\u0438\u0437\u0430\u0446\u0438\u0438
+organisations.no_created=\u041D\u0435\u0442 \u0441\u043E\u0437\u0434\u0430\u043D\u043D\u044B\u0445 \u043E\u0440\u0433\u0430\u043D\u0438\u0437\u0430\u0446\u0438\u0439
+organisation.change_services=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u0443\u0441\u043B\u0443\u0433\u0438
+organisation.change_masters=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u0441\u043F\u0435\u0446\u0438\u0430\u043B\u0438\u0441\u0442\u043E\u0432
+organisation.change_schedule=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u0440\u0430\u0441\u043F\u0438\u0441\u0430\u043D\u0438\u0435
+organisation.suspended=\u041E\u0440\u0433\u0430\u043D\u0438\u0437\u0430\u0446\u0438\u044F \u0432\u0440\u0435\u043C\u0435\u043D\u043D\u043E \u043F\u0440\u0438\u043E\u0441\u0442\u0430\u043D\u043E\u0432\u043B\u0435\u043D\u0430
+organisation.suspended.title=\u0427\u0442\u043E \u0437\u043D\u0430\u0447\u0438\u0442 \u043E\u0440\u0433\u0430\u043D\u0438\u0437\u0430\u0446\u0438\u044F \u043F\u0440\u0438\u043E\u0441\u0442\u0430\u043D\u043E\u0432\u043B\u0435\u043D\u0430?
+organisation.suspended.body=Organisation can be suspended by many reasons. Example:
+organisation.change=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u043E\u0440\u0433\u0430\u043D\u0438\u0437\u0430\u0446\u0438\u044E
+organisation.name=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
+organisation.name.invalid=Name length must be greater than 1 and less than 30 characters
+organisation.address=\u0410\u0434\u0440\u0435\u0441
+organisation.address.invalid=Address length must be greater than 4 and less than 46 characters
+organisation.desc=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
+organisation.desc.invalid=Description length must be greater than 30 and less than 121 character
+organisation.suspend=\u041F\u0440\u0438\u043E\u0441\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u044C
+organisation.launch=\u0417\u0430\u043F\u0443\u0441\u0442\u0438\u0442\u044C
+organisation.save=\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
+organisation.delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
+
+masters=\u0421\u043F\u0435\u0446\u0438\u0430\u043B\u0438\u0441\u0442\u044B
+master.create=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0441\u043F\u0435\u0446\u0438\u0430\u043B\u0438\u0442\u0441\u0430
+master.select=\u0412\u044B\u0431\u0440\u0430\u0442\u044C \u0441\u043F\u0435\u0446\u0438\u0430\u043B\u0438\u0441\u0442\u0430
+master.name=\u0418\u043C\u044F
+master.name.incorrect=Name length must be greater than 2 and less than 46 characters
+master.last_name=\u0424\u0430\u043C\u0438\u043B\u0438\u044F
+master.last_name.incorrect=Last name must be more than 2 and less than 46 characters
+master.desc=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
+master.desc.incorrect=Description length must be greater than 14 characters
+master.save=\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
+master.delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
+master.change=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u0440\u0430\u0431\u043E\u0442\u043D\u0438\u043A\u0430
+master.assign_services=\u041D\u0430\u0437\u043D\u0430\u0447\u0438\u0442\u044C \u0443\u0441\u043B\u0443\u0433\u0438
+#TODO \u043D\u0435 \u0432\u043B\u0430\u0437\u0438\u0442 \u043D\u0430\u0447\u0430\u043B\u043E \u043A\u043E\u043D\u0435\u0446
+
+services=\u0423\u0441\u043B\u0443\u0433\u0438
+service.create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0443\u0441\u043B\u0443\u0433\u0443
+service.select=\u0412\u044B\u0431\u0440\u0430\u0442\u044C \u0443\u0441\u043B\u0443\u0433\u0443
+service.name=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
+service.name.incorrect=The length of the title must be more than 2 and less than 40 characters
+service.price=\u0426\u0435\u043D\u0430
+service.price.incorrect=Price must be positive
+service.desc=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
+service.desc.incorrect=Description length must be greater than 14 characters
+service.save=\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
+service.delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
+service.change=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C
+service.append=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C
+service.remove=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
+
+date_time.select=\u0412\u044B\u0431\u0440\u0430\u0442\u044C \u0414\u0430\u0442\u0443 \u0438 \u0412\u0440\u0435\u043C\u044F
+schedule=\u0420\u0430\u0441\u043F\u0438\u0441\u0430\u043D\u0438\u0435
+date=\u0414\u0430\u0442\u0430
+date.incorrect=\u041D\u0443\u0436\u043D\u043E \u0432\u044B\u0431\u0440\u0430\u0442\u044C \u0431\u0443\u0434\u0443\u0449\u0443\u044E \u0434\u0430\u0442\u0443
+date.start=\u041D\u0430\u0447\u0430\u043B\u043E
+date.start.incorrect=s
+date.end=\u041A\u043E\u043D\u0435\u0446
+
+
+profiles=\u041F\u0440\u043E\u0444\u0438\u043B\u0438
+profiles.change=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u043F\u0440\u043E\u0444\u0438\u043B\u0438
+profile=\u041F\u0440\u043E\u0444\u0438\u043B\u044C
+profile.no_created=\u041D\u0435\u0442 \u0441\u043E\u0437\u0434\u0430\u043D\u043D\u044B\u0445 \u043F\u0440\u043E\u0444\u0438\u043B\u0435\u0439
+
+pagination.previous=\u041F\u0440\u0435\u0434\u044B\u0434\u0443\u0449\u0438\u0439
+pagination.next=\u0421\u043B\u0435\u0434\u0443\u044E\u0449\u0438\u0439
+
+
+
