Russian properties refactored

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -8,7 +8,7 @@ organisation.change_masters=Change Masters
 organisation.change_schedule=Change Schedule
 organisation.suspended=Organisation is currently suspended
 organisation.suspended.title=What does Organisation suspension mean
-organisation.suspended.body=Organisation can be suspended by many reasons. Example:
+organisation.suspended.body=An organization can be suspended for various reasons. For example: renovations are being made to the premises or non-compliance with the rules of the platform. While the organization is suspended, you will not be able to sign up for the service, and the created services will be cancelled.
 organisation.change=Change Organisation
 organisation.name=Name
 organisation.name.invalid=Name length must be greater than 1 and less than 30 characters
@@ -55,8 +55,12 @@ schedule=Schedule
 date=Date
 date.incorrect=You must choose future date
 date.start=Start
-date.start.incorrect=s
+date.start.incorrect=Hour must be >= 0 & < 24
 date.end=End
+date.end.incorrect1=Hour must be >= Start time & < 24
+date.end.incorrect2=End time !== Start time
+
+record.cancel=Cancel Records
 
 
 profiles=Profiles
