assignSchedule.html refactored

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -71,4 +71,7 @@ profile.no_created=No Profiles created
 pagination.previous=Previous
 pagination.next=Next
 
+#exceptions
+user.not_found=No user with id = {} found
+
 
