Validation to login and registration pages added

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -71,6 +71,46 @@ profile.no_created=No Profiles created
 pagination.previous=Previous
 pagination.next=Next
 
+
+#personal_cabinet
+personal_account=Personal account
+change_lang=Change Language
+russian=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
+english=English
+login=Login
+logout=Logout
+
+#registration
+reg.general_info=General Information
+reg.firstName=First name *
+reg.incorrect-firstName=Must be greater not be empty and less than 45 chars
+reg.lastName=Last name *
+reg.incorrect-lastName=Must be greater not be empty and less than 45 chars
+reg.login=Login *
+reg.incorrect-login=Must be greater than 6 and less than 30 chars
+reg.password=Password *
+reg.incorrect-password=Must be greater than 6 and less than 30 chars
+reg.contact_details=Contact Details
+reg.email=Email *
+reg.incorrect-email=Not valid. Example: example@gmail.com
+reg.incorrect-phoneNumber=Not valid. Example: +375441234567
+reg.phoneNumber=Phone Number *
+reg.iaccept.outer.f=I do accept the 
+reg.iaccept.inner=Terms and Conditions
+reg.register=Register
+
+#login
+log.enter-log=Enter your login
+log.login=Login
+log.incorrect-login=Must be greater than 6 and less than 30 chars
+log.incorrect-password=Must be greater than 6 and less than 30 chars
+log.enter-password=Enter password
+log.password=Password
+log.doLogin=Login
+log.doRegister=Register
+log.dontHaveAcc=Don't have an account?
+log.copyright=Copyright \u00A9 2022. All rights reserved.
+
 #exceptions
 user.not_found=No user with id = {} found
 
