Jwt token stored in cookies instead of headers

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -83,21 +83,30 @@ logout=Logout
 #registration
 reg.general_info=General Information
 reg.firstName=First name *
+reg.firstName.placeholder=John
 reg.incorrect-firstName=Must be greater not be empty and less than 45 chars
 reg.lastName=Last name *
+reg.lastName.placeholder=Doe
 reg.incorrect-lastName=Must be greater not be empty and less than 45 chars
 reg.login=Login *
+reg.login.placeholder=NFrealmusic
 reg.incorrect-login=Must be greater than 6 and less than 30 chars
+reg.incorrect-login.exists=provided Login already exists
 reg.password=Password *
 reg.incorrect-password=Must be greater than 6 and less than 30 chars
 reg.contact_details=Contact Details
 reg.email=Email *
+reg.email.placeholder=example@gmail.com
 reg.incorrect-email=Not valid. Example: example@gmail.com
+reg.incorrect-email.exists=provided email already exists
 reg.incorrect-phoneNumber=Not valid. Example: +375441234567
+reg.incorrect-phoneNumber.exists=provided hone number already exists
 reg.phoneNumber=Phone Number *
+reg.phoneNumber.placeholder=+375441234567
 reg.iaccept.outer.f=I do accept the 
 reg.iaccept.inner=Terms and Conditions
 reg.register=Register
+
 
 #login
 log.enter-log=Enter your login
