updateProfile page added

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -79,6 +79,8 @@ russian=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
 english=English
 login=Login
 logout=Logout
+my-profile=Update profile
+my-records=My records
 
 #registration
 reg.general_info=General Information
@@ -119,6 +121,16 @@ log.doLogin=Login
 log.doRegister=Register
 log.dontHaveAcc=Don't have an account?
 log.copyright=Copyright \u00A9 2022. All rights reserved.
+
+#updateProfile
+updateProfile.login=Login
+updateProfile.password=Password
+updateProfile.firstName=First Name
+updateProfile.lastName=Last Name
+updateProfile.email=Email
+updateProfile.update=Update
+updateProfile.delete=Delete
+updateProfile.phoneNumber=Number
 
 #exceptions
 user.not_found=No user with id = {} found
