updateProfile page fixed

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -102,7 +102,7 @@ reg.email.placeholder=example@gmail.com
 reg.incorrect-email=Not valid. Example: example@gmail.com
 reg.incorrect-email.exists=provided email already exists
 reg.incorrect-phoneNumber=Not valid. Example: +375441234567
-reg.incorrect-phoneNumber.exists=provided hone number already exists
+reg.incorrect-phoneNumber.exists=provided phone number already exists
 reg.phoneNumber=Phone Number *
 reg.phoneNumber.placeholder=+375441234567
 reg.iaccept.outer.f=I do accept the 
@@ -131,6 +131,7 @@ updateProfile.email=Email
 updateProfile.update=Update
 updateProfile.delete=Delete
 updateProfile.phoneNumber=Number
+updateProfile.updatePassword=Update password
 
 #exceptions
 user.not_found=No user with id = {} found
