AssignSchedule page refactored: new look of cancel records

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -60,6 +60,7 @@ date.end=End
 date.end.incorrect1=Hour must be >= Start time & < 24
 date.end.incorrect2=End time !== Start time
 
+
 record.cancel=Cancel Records
 
 
@@ -132,6 +133,10 @@ updateProfile.update=Update
 updateProfile.delete=Delete
 updateProfile.phoneNumber=Number
 updateProfile.updatePassword=Update password
+
+active=available
+booked=booked
+record.noRecords=No records available
 
 #exceptions
 user.not_found=No user with id = {} found
