Book utility request created

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -137,6 +137,7 @@ updateProfile.updatePassword=Update password
 active=available
 booked=booked
 record.noRecords=No records available
+record.create=Create Record
 
 #exceptions
 user.not_found=No user with id = {} found
