Internationalization classes created: Messages

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -141,5 +141,7 @@ record.create=Create Record
 
 #exceptions
 user.not_found=No user with id = {} found
-
+NoScheduleRecordFoundException=No user with id = {} found
+message.exception = I am an exception.
+message.exception1 = No user with id = {0, number, long} found
 
