Custom Exceptions localized

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -140,8 +140,30 @@ record.noRecords=No records available
 record.create=Create Record
 
 #exceptions
-user.not_found=No user with id = {} found
-NoScheduleRecordFoundException=No user with id = {} found
-message.exception = I am an exception.
-message.exception1 = No user with id = {0, number, long} found
-
+NoScheduleRecordFoundException.msg=No Record  found
+NoScheduleRecordFoundException.msg.id=No Record with id = {0} found
+NoOrganisationFoundException.msg.id=No Organisation with id = {0} found
+NoOrganisationFoundException.msg.login=No Organisation with redactors login = {0} found
+RecordCannotBeBookedException.msg=Record is not available
+OrganisationAlreadyExistsException.msg=Organisation already exists
+OrganisationIsAlreadyLaunchedException.msg.id=Organisation with id = {0} is already launched
+OrganisationIsAlreadySuspendedException.msg=Organisation is already suspended
+AttemptToAssignProfileToUserWithWrongRole.msg=Provided user with id = {0} has not role of UserRole.User
+NoProfileFoundException.msg.id=No Profile with id = {0} found
+UserIsAlreadyBoundedProfileException.msg.id=User with id = {0} already has Profile
+ScheduleRecordWithSuchWorkerAndTimeAlreadyExists.msg="ScheduleRecord with provided workerId and date already exists
+RecordIsAlreadyAvailableException.msg=Utility is already available
+NoUserFoundException.msg.id=No User with id = {0} found
+NoUserFoundException.msg.login=No User with login = {0} found
+UserAlreadyExistsException.msg.login=User with login = {0} already exists
+UsersRoleIsNotUserException.msg=Provided Profile's UsersRole is not USER
+NoUtilityFoundException.msg.id=No Utility with id = {0} found 
+UtilityAlreadyExistsException.msg=Utility with provided description, name, price already exist in this organisation
+UtilityAlreadyHasProvidedWorkerException.msg=Provided Utility already has provided worker
+UtilityDoesNotHaveProvidedWorkerException.msg=Provided Utility doesn't have provided worker
+AttemptToAssignUtilityOfOtherOrganisationException.msg=Utility belongs to other Organisation than Worker
+AttemptToDeleteUtilityFromWorkerOfOtherOrganisationException.msg=Utility belongs to other Organisation than Worker
+NoWorkerFoundException.msg.id=No Worker with id = {0} found 
+WorkerAlreadyHasProvidedUtilityException.msg=Worker already has provided Utility
+WorkerDoesNotBelongToOrganisationException.msg=Worker doesn't belong to provided organisation
+WorkerDoesNotHaveProvidedUtilityException.msg=Worker doesnt have provided Utility
