--- a/web/src/main/resources/messages_ru.properties
+++ b/web/src/main/resources/messages_ru.properties
@@ -80,6 +80,8 @@ russian=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
 english=English
 login=\u0412\u043E\u0439\u0442\u0438
 logout=\u0412\u044B\u0439\u0442\u0438
+my-profile=\u041E\u0431\u043D\u043E\u0432\u0438\u0442\u044C \u043F\u0440\u043E\u0444\u0438\u043B\u044C
+my-records=\u041C\u043E\u0438 \u0437\u0430\u043F\u0438\u0441\u0438
 
 #registration
 reg.general_info=\u041E\u0431\u0449\u0430\u044F \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F
@@ -120,6 +122,22 @@ log.doLogin=\u0412\u043E\u0439\u0442\u0438
 log.doRegister=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
 log.dontHaveAcc=\u0412\u044B \u0435\u0449\u0435 \u043D\u0435 \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u044B?
 log.copyright=Copyright \u00A9 2022. \u0412\u0441\u0435 \u043F\u0440\u0430\u0432\u0430 \u0437\u0430\u0449\u0438\u0449\u0435\u043D\u044B
+
+#updateProfile
+updateProfile.login=Login
+updateProfile.password=Password
+updateProfile.firstName=First Name
+updateProfile.lastName=Last Name
+updateProfile.email=Email
+updateProfile.update=Update
+updateProfile.delete=Delete
+updateProfile.phoneNumber=Number
+updateProfile.updatePassword=Update password
+
+active=\u0421\u0432\u043E\u0431\u043E\u0434\u043D\u0430
+booked=\u0417\u0430\u0431\u0440\u043E\u043D\u0438\u0440\u043E\u0432\u0430\u043D\u0430
+record.noRecords=\u041D\u0435\u0442 \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0445 \u0437\u0430\u043F\u0438\u0441\u0435\u0439
+record.create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0437\u0430\u043F\u0438\u0441\u044C 
 
 #exceptions
 NoScheduleRecordFoundException.msg=\u0417\u0430\u043F\u0438\u0441\u0438 \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D\u043E
