--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -167,3 +167,9 @@ NoWorkerFoundException.msg.id=No Worker with id = {0} found
 WorkerAlreadyHasProvidedUtilityException.msg=Worker already has provided Utility
 WorkerDoesNotBelongToOrganisationException.msg=Worker doesn't belong to provided organisation
 WorkerDoesNotHaveProvidedUtilityException.msg=Worker doesnt have provided Utility
+WrongUtilityAndWorkerParamsException.msg=Record doesn't have provided Utility or Worker 
+
+record.completed=Record is successfully booked
+record.time=Time
+record.worker=Your worker
+record.utility=Utility
