Redactor of another organisation tries to gain access of another organisation error handled

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -168,6 +168,7 @@ WorkerAlreadyHasProvidedUtilityException.msg=Worker already has provided Utility
 WorkerDoesNotBelongToOrganisationException.msg=Worker doesn't belong to provided organisation
 WorkerDoesNotHaveProvidedUtilityException.msg=Worker doesnt have provided Utility
 WrongUtilityAndWorkerParamsException.msg=Record doesn't have provided Utility or Worker 
+ProvidedUserIsNotRedactorOfOrganisation.msg=You are not redactor of Provided Organisation
 
 record.completed=Record is successfully booked
 record.time=Time
