Exception pages added, ErrorController Fixed

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -140,7 +140,7 @@ record.noRecords=No records available
 record.create=Create Record
 
 #exceptions
-NoScheduleRecordFoundException.msg=No Record  found
+NoScheduleRecordFoundException.msg=No Record found
 NoScheduleRecordFoundException.msg.id=No Record with id = {0} found
 NoOrganisationFoundException.msg.id=No Organisation with id = {0} found
 NoOrganisationFoundException.msg.login=No Organisation with redactors login = {0} found
@@ -174,3 +174,11 @@ record.completed=Record is successfully booked
 record.time=Time
 record.worker=Your worker
 record.utility=Utility
+
+oops=Oops!
+
+clientErrorMsg=Seems the problem is on your side :(
+serverErrorMsg=Seems the problem is on server side. Our engineers are already working on it
+
+badRequestMsg=The server cannot or will not process the request due to something that is perceived to be a client error (e.g., malformed request syntax, invalid request message framing, or deceptive request routing).
+
