Conversion error from String to Spring user in checkThatRedactorBelongsToOrganisation(id) fixed

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -181,4 +181,7 @@ clientErrorMsg=Seems the problem is on your side :(
 serverErrorMsg=Seems the problem is on server side. Our engineers are already working on it
 
 badRequestMsg=The server cannot or will not process the request due to something that is perceived to be a client error (e.g., malformed request syntax, invalid request message framing, or deceptive request routing).
+wrongCredentials=Incorrect Login or Password
 
+unauthorized=Unauthorized
+forbidden=You have no enough authorities to see this page
